@@ -1,5 +1,11 @@
 2016-09-14  Dirk Eddelbuettel  <edd@debian.org>
 
+	* NAMESPACE: Make getFormats() and addFormat() public
+
+	* src/anytime.cpp: Added documentation for new functions getFormats()
+	and addFormat()
+	* man/getFormats.Rd: Ditto
+
 	* inst/NEWS.Rd: Added
 
 	* tests/validate.R: Loosen test removing stopifnot
